ola-parser/src/testdata/syntaxTests/constants/constant_natspec_user.sol
/// Documentation
u256 constant x = 8;
// ----
// DocstringParsingError 6546: (0-18): Documentation tag @notice not valid for file-level variables.
